Implemented feature delete guarantee on the frontend side.
